# arrow_sandbox

./: LICENSE
ArrowFlightClient/: BUILD  MODULE.bazel  python_repository.bzl
ArrowFlightClientCpp/: arrow_repository.bzl  client.cpp  flight_repository.bzl  pyproject.toml
ArrowFlightServer/: pyproject.toml
ArrowFlightServer/arrowflightserver/: main.py
ArrowFlightServerCpp/: .bazelrc  BUILD  MODULE.bazel  action.py  python_repository.bzl  server.cpp
lima_templates/: docker-apache-arrow.yaml
